--- a/styles-main.css
+++ b/styles-main.css
@@ -10,25 +10,26 @@ body {
 
 h1 {
   text-align:center ;
-  font: normal bold 52px calligra, verdana ;
+  font: normal bold 13vw calligra, verdana ;
+  padding: 3vw;
   border: 10px solid #d2c507;
   border-radius: 36%;
-  width: 400px;
+  /*width: 80%; 400px;*/
   background: #88FFFF;
 }
 
 h2 {
   flex: none;
   text-align:center ;
-  font: normal bold 36px calligra, verdana ;
+  font: normal bold 9vw calligra, verdana ;
   background: #88FFFF;
   border: 6px solid #cdcdcd;
   border-radius: 24%;
-  padding: 8px;
+  padding: 2vw;
 }
 
-h3 { font: normal bold 24px calligra, verdana ; }
-h4 { font: normal bold 20px calligra, verdana ; }
+h3 { font: normal bold 7vw calligra, verdana ; }
+h4 { font: normal bold 5vw calligra, verdana ; }
 
 p {
   text-align:justify ;
@@ -84,13 +85,18 @@ img { position:relative ; }
 
 /********* Boxes **********/
 .links-container {
-  width: 100%;
+  width: 92%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center; /*flex-start;*/
-  gap: 20px;
+  gap: 2vw;
   /*max-width: 400px; /* Maxwidth for bigscreens */
+}
+
+
+.links-container h2 {
+  margin-bottom: 0vw;
 }
 
 
@@ -104,7 +110,7 @@ img { position:relative ; }
   padding: 0px; /* Intern spacing */
   border: none; /* No border */
   border-radius: 20px; /* Rounded corners */
-  font-size: 42px; /* Font size */
+  font-size: 7vw; /* Font size */
   font-family: EB Garamond, Verdana, Arial;
   text-align: center;
 }
@@ -116,7 +122,7 @@ img { position:relative ; }
   width: 100%;
   text-align: left;
   align-items: center;
-  padding: 10px 15% 10px 28%; /* URDL */
+  padding: 1vw 15% 1vw 28%; /* URDL */
 }
 
 
@@ -124,10 +130,10 @@ img { position:relative ; }
 
 /***** FA ******/
 .fab {
-  padding: 20px;
-  margin-right: 20px;
-  font-size: 60px;
-  width: 50px;
+  padding: 4vw;/*20px;*/
+  margin-right: 3vw; /*20px;*/
+  font-size: 12vw; /*60px;*/
+  width: 11vw; /*50px;*/
   text-align: center;
   text-decoration: none;
   border-radius: 20%;
@@ -141,9 +147,9 @@ img { position:relative ; }
 
 /*For SVG generated FA incons*/
 .svg-fa {
-  width: 74px;
-  padding: 10px;
-  margin-right: 20px;
+  width: 11vw; /*74px;*/
+  padding: 4vw; /*10px;*/
+  margin-right: 3vw; /*20px;*/
   border-radius: 20%;
 }
 
@@ -161,7 +167,7 @@ img { position:relative ; }
 .fa-twitter {
   background: #55ACEE;
   color: white;
-  padding-right: 25px;
+  /*padding-right: 25px;*/
 }
 
 /* Instagram */
@@ -181,23 +187,33 @@ img { position:relative ; }
 .fa-telegram {
   background: linear-gradient(#36AEE0,#1C96D1);
   color: white;
-  padding-right: 25px;
+  /*padding-right: 25px;*/
 }
 
 /*YouTube*/
 .fa-youtube {
   background: rgb(201,0,0);
   color: white;
-  padding-left: 15px;
-  padding-right: 27px;
+  /*padding-left: 15px;
+  padding-right: 27px;*/
 }
+
+.fa-youtube::before {
+  margin-left: -1vw;
+  /*padding-right: 27px;*/
+}
+
 
 /*VK*/
 .fa-vk {
   background: linear-gradient(#36AEE0,#1C96D1);
   color: white;
-  padding-left: 15px;
-  padding-right: 30px;
+  /*padding-left: 15px;
+  padding-right: 30px;*/
+}
+
+.fa-vk::before {
+  margin-left: -1.5vw;
 }
 
 
@@ -205,22 +221,21 @@ img { position:relative ; }
 .fa-reddit-alien {
   background: #ff7800;
   color: white;
-  padding-right: 27px;
+  /*padding-right: 27px;*/
 }
 
 /*Discord*/
 .fa-discord {
   background: white;
   color: blue;
-  font-size: 72px;
-  padding-right: 30px;
+  /*padding-right: 30px;*/
 }
 
 /*GitHub*/
 .fa-github {
   background: black;
   color: white;
-  padding-right: 27px;
+  /*padding-right: 27px;*/
 }
 
 
@@ -230,24 +245,36 @@ img { position:relative ; }
 
 
 .fa-paypal {
+  padding: 2vw 4vw;
   color: rgb(30, 48, 80);
-  font-size: 74px;
+  font-size: 15vw;
 }
 
 
 .fa-bitcoin {
+  padding: 1vw 4vw;
+  font-size: 15vw;
   color: black;
-  font-size: 74px;
-  padding-left: 12px;
+}
+
+.fa-bitcoin::before {
+  margin-left: -1vw;
 }
 
 
 .fa-ethereum {
-  padding: 12px;
+  padding: 2vw;
   border-radius: 50%;
   background: #4A7FF2;
   color: #e1fdff;
-  margin-left: 12px;
+  margin-left: 3vw;
+}
+
+
+.fa-toncoin {
+  padding: 1vw 3vw;
+  margin-right: 0vw;
+  width: 15vw;
 }
 
 
