--- a/styles-main.css
+++ b/styles-main.css
@@ -85,7 +85,7 @@ img { position:relative ; }
 
 /********* Boxes **********/
 .links-container {
-  width: 92%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -122,7 +122,16 @@ img { position:relative ; }
   width: 100%;
   text-align: left;
   align-items: center;
-  padding: 1vw 15% 1vw 28%; /* URDL */
+  padding: 1vw 3% 1vw 3%; /* URDL */
+}
+
+
+@media (min-width: 540px) {
+
+.link-box a {
+  padding: 1vw 15% 1vw 23%; /* URDL */
+}
+
 }
 
 
