--- a/styles-main.css
+++ b/styles-main.css
@@ -126,11 +126,31 @@ img { position:relative ; }
 }
 
 
+/*Used for multiline wrap in big texts*/
+.big-text {
+  width: 65%;
+  font-size: 6vw;
+  word-wrap: break-word; /* Allows line adjustment */
+  overflow-wrap: break-word; /* For more compatibility with navigators */
+}
+
+
+
+/****Responsive design in function of scree-width****/
 @media (min-width: 540px) {
 
 .link-box a {
   padding: 1vw 15% 1vw 23%; /* URDL */
 }
+
+
+.big-text {
+  width: 45%;
+  font-size: 6vw;
+  word-wrap: break-word; /* Allows line adjustment */
+  overflow-wrap: break-word; /* For more compatibility with navigators */
+}
+
 
 }
 
@@ -164,6 +184,22 @@ img { position:relative ; }
   background-repeat: no-repeat;
   margin-right: 3vw; /*20px;*/
   border-radius: 20%;
+}
+
+
+
+/*A sign when a text is copied*/
+.copy-sign {
+  position: absolute;
+  top: 35%;
+  left: 35%;
+  width: 24vw;
+  z-index: 1;
+  font: normal normal 5vw Courier New, Arial;
+  background: black;
+  color: white;
+  text-align: center;
+  border-radius: 2vw;
 }
 
 
